楽観的ロックNGを特別に処理する。

--- a/modules/frontweb/src/main/resources/i18n/messages.properties
+++ b/modules/frontweb/src/main/resources/i18n/messages.properties
@@ -57,6 +57,7 @@ message.todo.create.confirm=以下の内容で作成します。
 message.todo.create.success=作成しました。
 message.todo.update.confirm=以下の内容に更新します。
 message.todo.update.success=更新しました。
+message.todo.update.failed-conflict=更新済でした。
 message.todo.delete.confirm=以下の内容を削除します。
 message.todo.delete.success=削除しました。
 message.todo.delete.success-deleted=削除済でした。
